--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         <h2 class="animate loader">MILH<i class="fa fa-home" aria-hidden="true"></i>USE</h2>
     </div>
 
-    <!--<section style="height: 200px; width: 100%;">
-        <div></div>
-    </section>-->
+    <div class="havay"></div>
 
     <!--============ Web Header ============-->
 <div class="headerfont">
